TestCases/LLVMTests/SyntaxErrorTests/tests/test55.c
#include <stdio.h>

int main() {
    int x = 3;
    int y = (x+1)++;
    return 0;
}